/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the groovy plugin to also add support for Groovy (needed for Spock)
    id 'groovy'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {

}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

jar {
    manifest {
        attributes 'Main-Class': 'gal.jtoja.virtual.threads.simple.JavaThreadingComparison'
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

application {
    // Define the main class for the application.
    mainClass = 'gal.jtoja.virtual.threads.simple.JavaThreadingComparison'
}
